--- a/libafl_targets/Cargo.toml
+++ b/libafl_targets/Cargo.toml
@@ -65,9 +65,11 @@ libafl = { path = "../libafl", version = "0.11.2", default-features = false, fea
 libafl_bolts = { path = "../libafl_bolts", version = "0.11.2", default-features = false, features = [] }
 libc = "0.2"
 log = "0.4.20"
+backtrace = "0.3"
 
 rangemap = "1.3"
 serde = { version = "1.0", default-features = false, features = ["alloc"] } # serialization lib
 meminterval = { version = "0.4", features = ["serde"], optional = true }
 ahash = { version = "0.8.3", default-features = false, optional = true }
+once_cell = "1.19.0"
 # serde-big-array = "0.3.2"
