--- a/libafl_targets/Cargo.toml
+++ b/libafl_targets/Cargo.toml
@@ -68,6 +68,7 @@ libafl_bolts = { path = "../libafl_bolts", version = "0.11.2", default-features 
 libc = "0.2"
 log = "0.4.20"
 backtrace = "0.3"
+hashbrown =  { version = "0.14", features = ["serde", "ahash"], default-features=false } # A faster hashmap, nostd compatible
 
 rangemap = "1.3"
 serde = { version = "1.0", default-features = false, features = ["alloc"] } # serialization lib
