--- a/fuzzers/fuzzbench_dataflow_guided/Cargo.toml
+++ b/fuzzers/fuzzbench_dataflow_guided/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "fuzzbench"
-version = "0.11.2"
-authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>", "Dominik Maier <domenukk@gmail.com>"]
+name = "fuzzbench_dataflow_guided"
+version = "0.0.1"
+authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>", "Dominik Maier <domenukk@gmail.com>", "Dan Blackwell <danblackwell95@yahoo.co.uk>"]
 edition = "2021"
 
 [features]
@@ -30,7 +30,7 @@ libafl_bolts = { path = "../../libafl_bolts/" }
 libafl_targets = { path = "../../libafl_targets/", features = ["sancov_pcguard_hitcounts", "sancov_cmplog", "libfuzzer"] }
 # TODO Include it only when building cc
 libafl_cc = { path = "../../libafl_cc/" }
-clap = { version = "4.0", features = ["default"] }
+clap = { version = "3", features = ["default"] }
 nix = { version = "0.27", features = ["fs"] }
 mimalloc = { version = "*", default-features = false }
 
