--- a/libafl_targets/Cargo.toml
+++ b/libafl_targets/Cargo.toml
@@ -69,6 +69,7 @@ libc = "0.2"
 log = "0.4.20"
 backtrace = "0.3"
 hashbrown =  { version = "0.14", features = ["serde", "ahash"], default-features=false } # A faster hashmap, nostd compatible
+nix = "0.27"
 
 rangemap = "1.3"
 serde = { version = "1.0", default-features = false, features = ["alloc"] } # serialization lib
