--- a/fuzzers/fuzzbench_dataflow_guided/afl-cc/utils/aflpp_driver/GNUmakefile
+++ b/fuzzers/fuzzbench_dataflow_guided/afl-cc/utils/aflpp_driver/GNUmakefile
@@ -23,7 +23,7 @@ CFLAGS := -O3 -funroll-loops -g -fPIC
 all:	libAFLDriver.a libAFLQemuDriver.a aflpp_qemu_driver_hook.so
 
 aflpp_driver.o:	aflpp_driver.c
-	-$(CC) -I. -I../../include $(CFLAGS) -fsanitize=dataflow -mllvm -dfsan-conditional-callbacks=true -c aflpp_driver.c
+	-$(CC) -I. -I../../include $(CFLAGS) -fsanitize=dataflow -c aflpp_driver.c
 
 libAFLDriver.a:	aflpp_driver.o
 	@ar rc libAFLDriver.a aflpp_driver.o
